--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem;">
+<div class="card">
     <div class="card-header">작성자</div>
     <img src="{{ post.image.url }}" class="" alt="">
     <div class="card-body">
