--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,7 +1,13 @@
-<div class="card">
-    <div class="card-header">{{ post.user }}</div>
-    <img src="{{ post.image.url }}" class="" alt="">
+<div class="card my-3 col-12 col-md-6 col-lg-4 col-xl-3">
+    <div class="card-header">
+        <img src="{{ post.user.profile_image.url }}" alt="" class="rounded-circle" width="30px">
+        {{ post.user }}
+    </div>
+    <img src="{{ post.image.url }}">
     <div class="card-body">
         <p class="card-text">{{ post.content }}</p>
+    </div>
+    <div class="card-footer">
+        <p class="card-text">{{ post.created_at }}</p>
     </div>
 </div>
