좋아요기능 모델링

--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <div class="row">
+    <div class="row-col-1">
         {% for post in posts %}
             {% include '_card.html' %}
         {% endfor %}
