--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,4 +1,4 @@
-<div class="card my-3 col-12 col-md-6 col-lg-4 col-xl-3">
+<div class="card my-3 col-4">
     <div class="card-header">
         <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
         <img src="{{ post.user.profile_image.url }}" alt="" class="rounded-circle" width="30px">
