--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,4 +1,4 @@
-<div class="card my-3 col-4">
+<div class="card my-3 col-12 col-md-6 col-lg-4 col-xl-3">
     <div class="card-header">
         <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
         <img src="{{ post.user.profile_image.url }}" alt="" class="rounded-circle" width="30px">
@@ -8,18 +8,27 @@
 
     <div class="card-body">
         <img src="{{ post.image.url }}" class="img-fluid">
-        <p class="mt-2">
-            <i class="bi bi-heart"></i>&nbsp;
-            <i class="bi bi-chat-right"></i>&nbsp;
+        <div class="mt-3">
+            <a href="{% url 'posts:likes' id=post.id %}" class="text-reset text-decoration-none">
+                {% if user in post.like_users.all %}
+                    <i class="bi bi-heart-fill" style="color:red"></i>
+                {% else %}
+                    <i class="bi bi-heart"></i>
+                {% endif %}
+            </a>
+            &nbsp;
+            <i class="bi bi-chat-right"></i>&nbsp;&nbsp;
             <i class="bi bi-send"></i> 
-        </p>
-        <p class="card-text">
-            <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
-                <b>{{post.user}}</b>
-            </a>  
-            {{ post.content }}
-        </p> 
-
+            {% if post.like_users.all.count %}
+                <p>{{ post.like_users.count }}명이 좋아합니다.</p>
+            {% endif %}
+            <p class="card-text">
+                <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
+                    <b>{{post.user}}</b>
+                </a>  
+                {{ post.content }}
+            </p> 
+        </div>
     </div>
     <div class="card-footer">
         <p class="card-text">{{ post.created_at }}</p>
