--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -4,7 +4,10 @@
 <div class="mt-5">
     <div class="row">
         <div class="col-4">
+            {% if user_info.profile_image %}
             <img src="{{ user_info.profile_image.url }}" alt="" class="rounded-circle img-fluid">
+            {% else %}
+            <img src="/media/profile/default.jpg" alt="">
         </div>
         <div class="col-8">
             <div class="row mt-3">
