좋아요기능 비동기처리 javascript

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -8,6 +8,7 @@
             <img src="{{ user_info.profile_image.url }}" alt="" class="rounded-circle img-fluid">
             {% else %}
             <img src="/media/profile/default.jpg" alt="">
+            {% endif %}
         </div>
         <div class="col-8">
             <div class="row mt-3">
