--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,40 +1,73 @@
-<div class="card my-3 col-12">
-    <div class="card-header">
-        <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
-        {% if post.user.profile_image %}  
-        <img src="{{ post.user.profile_image.url }}" alt="" class="rounded-circle" width="30px">
-        {% else %}
-        <img src="/media/profile/default.jpg" alt="" class="rounded-circle" width="30px">
-        {% endif %}
-        {{ post.user }}
-        </a>
+{% load bootstrap5 %}
+
+<div class="card mt-2 col-12 border-0" style="max-width: 500px">
+    <div class="card-header border-0 bg-white">
+        <div class="row">
+            <div class="col-1">
+                <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
+                    {% if post.user.profile_image %}
+                    <img src="{{ post.user.profile_image.url }}" alt="" class="rounded-circle" width="30px">
+                    {% else %}
+                    <img src="/media/profile/default.jpg" alt="" class="rounded-circle" width="30px">
+                    {% endif %}
+                </a>
+            </div>
+            <div class="col-10">
+                <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
+                    <b>{{ post.user }}</b>
+                </a>
+            </div>
+            <div class="col-1 m-0 p-0">
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                    class="border-0 bg-white m-0 p-0">
+                    <i class="bi bi-three-dots m-0 p-0"></i>
+                </button>
+                {% include '_modal.html' %}
+            </div>
+        </div>
     </div>
 
     <div class="card-body">
         <img src="{{ post.image.url }}" class="img-fluid">
-        <div class="mt-3">
-            <a href="{% url 'posts:likes' id=post.id %}" class="text-reset text-decoration-none">
+        <div class="mt-2">
+            
                 {% if user in post.like_users.all %}
-                    <i class="bi bi-heart-fill" style="color:red"></i>
+                <i class="bi bi-heart-fill heart" style="color:red" data-post-id="{{post.id}}">{{ post.like_users.count }}</i>
                 {% else %}
-                    <i class="bi bi-heart"></i>
+                <i class="bi bi-heart heart" data-post-id="{{post.id}}">{{ post.like_users.count }}</i>
                 {% endif %}
-            </a>
+            
             &nbsp;
             <i class="bi bi-chat-right"></i>&nbsp;&nbsp;
-            <i class="bi bi-send"></i> 
+            <i class="bi bi-send"></i>
+        </div>
+        <div>
             {% if post.like_users.all.count %}
-                <p>{{ post.like_users.count }}명이 좋아합니다.</p>
+            <p>{{ post.like_users.count }}명이 좋아합니다.</p>
             {% endif %}
+        </div>
+        <div>
             <p class="card-text">
                 <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
                     <b>{{post.user}}</b>
-                </a>  
+                </a>
                 {{ post.content }}
-            </p> 
+            </p>
         </div>
+        
+        <div>
+            {% include '__comment.html' %}
+        </div>
+        <div>
+            <form action="{% url 'posts:comment_create' id=post.id %}" method="post">
+                {% csrf_token %}
+                {% bootstrap_form form show_label=False %}
+                <input type="submit">
+            </form>
+        </div>
+
     </div>
-    <div class="card-footer">
+    <div class="card-footer bg-white border-0">
         <p class="card-text">{{ post.created_at }}</p>
     </div>
 </div>
