--- a/posts/templates/__comment.html
+++ b/posts/templates/__comment.html
@@ -5,12 +5,15 @@
 {% endif %}
 
 {% for comment in post.comment_set.all %}
-    {% if comment.pk > post.comment_set.count|sub:1 %}
-        <p>
-            <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
-                <b>{{comment.user}}</b>
-            </a>
-            {{comment.comment}}
-        </p>
+    {% if comment.id > post.comment_set.count|sub:1 %}
+        <div id="comment-list-{{ post.id }}">
+            <p>
+                <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
+                    <b>{{comment.user}}</b>
+                </a>
+                {{comment.comment}}
+            </p>
+           
+        </div>
     {% endif %}
 {% endfor %}
