--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -16,6 +16,7 @@
                 <a href="{% url 'accounts:profile' username=post.user %}" class="text-reset text-decoration-none">
                     <b>{{ post.user }}</b>
                 </a>
+                <span>{{ post.time_since_created }}</span>
             </div>
             <div class="col-1 m-0 p-0">
                 <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -59,15 +60,16 @@
             {% include '__comment.html' %}
         </div>
         <div>
-            <form action="{% url 'posts:comment_create' id=post.id %}" method="post">
+            <form action="{% url 'posts:comment_create' id=post.id %}" method="post" class="comment-form">
                 {% csrf_token %}
                 {% bootstrap_form form show_label=False %}
-                <input type="submit">
+                <input type="submit" value="submit" class ="inactive">
             </form>
         </div>
-
+        
     </div>
     <div class="card-footer bg-white border-0">
         <p class="card-text">{{ post.created_at }}</p>
+        
     </div>
 </div>
